@@ -2,7 +2,6 @@ plugins {
     java
     id("org.springframework.boot") version "3.4.4"
     id("io.spring.dependency-management") version "1.1.7"
-    id("org.graalvm.buildtools.native") version "0.10.6"
 }
 
 group = "com.sslproxy"
@@ -43,6 +42,9 @@ dependencies {
     implementation("org.postgresql:postgresql:$postgresqlVersion")
     implementation("io.minio:minio:8.5.17")
 
+    // Functional primitives
+    implementation("io.vavr:vavr:1.0.1")
+
     // JSON processing
     implementation("com.fasterxml.jackson.core:jackson-databind")
 
@@ -73,6 +75,6 @@ tasks.bootBuildImage {
     environment.put("BP_JVM_VERSION", "21.*")
     environment.put(
         "BPE_APPEND_JAVA_TOOL_OPTIONS",
-        " -XX:+UseZGC -XX:+ZGenerational -XX:InitialRAMPercentage=50 -XX:MaxRAMPercentage=75 -Dspring.aot.enabled=true"
+        " -XX:+UseZGC -XX:InitialRAMPercentage=50 -XX:MaxRAMPercentage=75 -Dspring.aot.enabled=true"
     )
 }
